--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     </developers>
     <scm>
         <connection>https://github.com/jenkinsci/cloudify-plugin.git</connection>
-        <developerConnection>scm:git:https://github.com/jenkinsci/cloudify-plugin.git</developerConnection>
+        <developerConnection>scm:git://git@github.com:jenkinsci/cloudify-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/cloudify-plugin.git</url>
         <tag>HEAD</tag>
     </scm>
