--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:ssh://git@github.com:jenkinsci/cloudify-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:jenkinsci/cloudify-plugin.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com/jenkinsci/cloudify-plugin.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/cloudify-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/cloudify-plugin.git</url>
         <tag>cloudify-1.0.9</tag>
     </scm>
