--- a/pom.xml
+++ b/pom.xml
@@ -9,22 +9,25 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>cloudify</artifactId>
-    <version>1.0.12</version>
+    <version>1.0.13</version>
     <packaging>hpi</packaging>
     <properties>
         <!--
         Let's try to support the earliest LTS version recommended by Jenkins:
         https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/#currently-recommended-versions
         -->
-        <jenkins.version>2.222.1</jenkins.version>
-        <java.level>8</java.level>
-        <slf4jVersion>1.7.30</slf4jVersion>
-        <jersey.version>2.31</jersey.version>
-        <jackson.version>2.11.1</jackson.version>
-        <credentials.version>2.3.7</credentials.version>
+        <jenkins.version>2.387.3</jenkins.version>
+        <java.level>11</java.level>
+        <java.version>11</java.version>
+        <slf4jVersion>2.0.6</slf4jVersion>
+        <jersey.version>3.1.0</jersey.version>
+        <jackson.version>2.15.2-350.v0c2f3f8fc595</jackson.version>
+        <credentials.version>1224.vc23ca_a_9a_2cb_0</credentials.version>
         <azure-credentials.version>4.0.2</azure-credentials.version>
         <azure-commons.version>1.0.4</azure-commons.version>
         <aws-credentials.version>1.28</aws-credentials.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <name>Cloudify</name>
     <licenses>
@@ -51,7 +54,18 @@
         <dependency>
             <groupId>co.cloudify</groupId>
             <artifactId>rest-client</artifactId>
-            <version>6.4.0</version>
+            <version>7.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.21</version>
+            <type>pom</type>
         </dependency>
 		<!-- Other Jenkins plugins that we depend on. -->
         <dependency>
@@ -69,7 +83,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>${jackson.version}</version>
+            <version>2.15.2</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -135,17 +149,17 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
-                <version>2.11.2</version>
+                <version>2.15.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
-                <version>4.5.3</version>
+                <version>4.5.14</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcore</artifactId>
-                <version>4.4.6</version>
+                <version>4.4.16</version>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
@@ -242,6 +256,56 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <testSource>11</testSource>
+                    <testTarget>11</testTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.kohsuke</groupId>
+                <artifactId>access-modifier-checker</artifactId>
+                <version>1.30</version>
+                <executions>
+                    <execution>
+                        <id>enforce-access-modifiers</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.jenkins-ci.tools</groupId>
+                <artifactId>maven-hpi-plugin</artifactId>
+                <version>3.12</version>
+                <configuration>
+                    <minimumJavaVersion>11</minimumJavaVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>animal-sniffer-maven-plugin</artifactId>
+                <version>1.23</version>
+                <configuration>
+                    <signature>
+                        <groupId>org.codehaus.mojo.signature</groupId>
+                        <artifactId>java18</artifactId>
+                        <version>1.0</version>
+                    </signature>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.3.0</version>
+            </plugin>
+        </plugins>
     </build>
     <repositories>
         <repository>
